unpackaged/main/default/objects/ValidationRules__c/ValidationRules__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Validation Rules</label>
</CustomObject>