unpackaged/main/default/objects/ValidationRules__c/fields/Allow_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Allow_Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Email Opt In</label>
    <type>Checkbox</type>
</CustomField>