unpackaged/main/default/objects/ValidationRules__c/fields/Allow_Funding_Status_Updates__c.field-meta.xml
<CustomField>
    <fullName>Allow_Funding_Status_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in cannot_change_internal_funding_status Funding validation rule</description>
    <inlineHelpText>used in cannot_change_internal_funding_status Funding validation rule</inlineHelpText>
    <label>Allow Funding Status Updates</label>
    <type>Checkbox</type>
</CustomField>