unpackaged/main/default/objects/ValidationRules__c/fields/Bypass_Future_Date_Established_Val_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Future_Date_Established_Val_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Future Date Established Val Rule</label>
    <type>Checkbox</type>
</CustomField>