unpackaged/main/default/objects/ValidationRules__c/fields/Bypass_Invalid_Phone_Format_Val_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Invalid_Phone_Format_Val_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Invalid Phone Format Val Rule</label>
    <type>Checkbox</type>
</CustomField>