unpackaged/main/default/objects/ValidationRules__c/fields/Bypass_Lead_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Lead_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Lead Validation Rules</label>
    <type>Checkbox</type>
</CustomField>