unpackaged/main/default/objects/ValidationRules__c/fields/Bypass_Opportunity_Stage_Validations__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Opportunity_Stage_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Opportunity Stage Validations</label>
    <type>Checkbox</type>
</CustomField>