unpackaged/main/default/objects/ValidationRules__c/fields/Decline_Opportunity_No_Reason_Closed__c.field-meta.xml
<CustomField>
    <fullName>Decline_Opportunity_No_Reason_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting is checked in the Broker_Renewal_Decline_Reason_is_Null Opportunity validation rule to determine if an Opportunity can be declined with a blank Reason Closed value.</description>
    <label>Decline Opportunity - No Reason Closed</label>
    <type>Checkbox</type>
</CustomField>