unpackaged/main/default/objects/ValidationRules__c/fields/Edit_FO_When_Selected__c.field-meta.xml
<CustomField>
    <fullName>Edit_FO_When_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit FO When Selected</label>
    <type>Checkbox</type>
</CustomField>