unpackaged/main/default/objects/ValidationRules__c/fields/Edit_NF_Lease_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Edit_NF_Lease_Loan_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ACH Payment --&gt; NF Lease/Loan Number</description>
    <label>Edit NF Lease/Loan Number</label>
    <type>Checkbox</type>
</CustomField>