unpackaged/main/default/objects/ValidationRules__c/fields/Edit_Payee_ACH_Payment_Info__c.field-meta.xml
<CustomField>
    <fullName>Edit_Payee_ACH_Payment_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Payee_s_Account_Type__c
Payee_s_Bank_Account_Number__c
Payee_s_Bank_Name__c
Payee_s_Routing_Number__c</description>
    <label>Edit Payee ACH Payment Info</label>
    <type>Checkbox</type>
</CustomField>