unpackaged/main/default/objects/ValidationRules__c/fields/Exclude_from_Funding_Pricing_Val_Rule__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Funding_Pricing_Val_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclusion from Cannot_edit_pricing_definition_if_funded on Funding object</description>
    <label>Exclude from Funding Pricing Val Rule</label>
    <type>Checkbox</type>
</CustomField>