unpackaged/main/default/objects/ValidationRules__c/fields/Pull_Pay_History_for_Perm_Mod__c.field-meta.xml
<CustomField>
    <fullName>Pull_Pay_History_for_Perm_Mod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows users to pull the Pay History if there is an active related Payment Agreement for Permanent Modification.</description>
    <inlineHelpText>Allows users to pull the Pay History if there is an active related Payment Agreement for Permanent Modification.</inlineHelpText>
    <label>Pull Pay History for Perm Mod</label>
    <type>Checkbox</type>
</CustomField>