unpackaged/main/default/objects/ValidationRules__c/fields/Transfer_Leads__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Leads</label>
    <type>Checkbox</type>
</CustomField>