unpackaged/main/default/objects/ValidationRules__c/fields/Transfer_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Opportunities</label>
    <type>Checkbox</type>
</CustomField>