unpackaged/main/default/objects/ValidationRules__c/fields/Update_Declined_CR_Status__c.field-meta.xml
<CustomField>
    <fullName>Update_Declined_CR_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>allow user to update CR status from Decline to EP Review Done (PD-2269)</description>
    <label>Update Declined CR Status</label>
    <type>Checkbox</type>
</CustomField>